[package]
name = "chimoney"
version = "0.0.0-unreleased"
edition = "2021"
description = "a wrapper for the Chimoney API"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
reqwest = { version = "0.11.23", features = ["json"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
thiserror = "1.0.56"

[dev-dependencies]
tokio = { version = "1.35.1", features = ["macros"] }

[lints.rust]
# missing_docs = "warn"

[lints.clippy]
pedantic = "warn"
nursery = "warn"
unwrap_used = "deny"
module_name_repetitions = "allow"

